--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,21 @@ body {
 .m-1 {
   margin: 1rem;
 }
+.p-1 {
+  padding: 1rem;
+}
+.ph-1 {
+  padding: 0 1rem;
+}
+.pv-1 {
+  padding: 1rem 0;
+}
+.m-_5 {
+  margin: 0.5rem;
+}
+.p-_5 {
+  padding: 0.5rem;
+}
 .align-center {
   display: flex;
   align-items: center;
@@ -88,8 +103,17 @@ textarea:focus {
   border: none;
   outline: none;
 }
-
-/*  */
+.flex-row {
+  display: flex;
+  flex-direction: row;
+}
+.align-horizontal-end {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: flex-end;
+}
+/*  ======================================  */
 
 .navbar {
   position: fixed;
