--- a/src/components/Posts/style.css
+++ b/src/components/Posts/style.css
@@ -95,5 +95,39 @@
 }
 .post_reaction_button_icon {
   font-size: 1.5rem;
+
   margin-right: 0.5rem;
+}
+/*  */
+.commentCard_main_cont {
+  width: 60%;
+  padding: 0.5rem 1rem;
+}
+.commentCard_body {
+  background: var(--background-light);
+  padding: 0.5rem;
+  margin: 0.5rem;
+  border-radius: 1rem;
+}
+/*  */
+.post_comment_input {
+  padding: 1rem;
+}
+.post_comment_input > input {
+  flex: 1;
+  padding: 0.5rem 1rem;
+  margin: 0.5rem;
+  background: var(--background-light);
+  border-radius: 50px;
+  /* width: calc(90% - 1rem); */
+  height: 50px;
+}
+.post_comment_input > button {
+  background: var(--primary);
+  padding: 0.5rem;
+  margin: 0.5rem;
+  border-radius: 50px;
+  /* width: calc(10% - 1rem); */
+  width: 50px;
+  height: 50px;
 }
