--- a/src/App.css
+++ b/src/App.css
@@ -127,7 +127,28 @@ textarea:focus {
   font-size: 1.2rem;
 }
 /*  ======================================  */
+/* width */
+::-webkit-scrollbar {
+  width: 1rem;
+}
 
+/* Track */
+::-webkit-scrollbar-track {
+  /* box-shadow: inset 0 0 5px grey;  */
+  border-radius: 0.5rem;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--secondary-light);
+  border-radius: 0.5rem;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--secondary);
+}
+/*  ======================================  */
 .navbar {
   position: fixed;
   top: 0;
